--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.11.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
