--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "server": "ts-node backend/src/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -21,6 +22,7 @@
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "ts-node": "^10.7.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
