--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.11.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1"
   },
