--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
@@ -22,8 +23,8 @@
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "ts-node": "^10.7.0",
     "prettier": "^2.5.1",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
