--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "prisma": "^3.11.0",
